[project]
name = "graphrag-cooking-assistant"
version = "0.1.0"
description = "基于大模型+知识图谱的增强型RAG烹饪问答系统"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 深度学习 & Embedding
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "sentence-transformers>=3.0.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.33.4",

    # LangChain
    "langchain-core>=0.3.71",
    "langchain-openai>=0.3.0",
    "langchain-community==0.3.27",
    "langchain-huggingface==0.3.1",
    "langchain-text-splitters==0.3.8",

    # 数据库
    "neo4j>=5.0.0",

    # 检索 (FAISS)
    "faiss-cpu>=1.7.0",

    # 检索
    "rank-bm25>=0.2.2",

    # LLM API
    "openai>=1.86.0,<2.0.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "tiktoken>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "tqdm>=4.64.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "lazy_loader==0.4",
    "unstructured-client==0.41.0",

    # Web界面
    "streamlit>=1.35.0",
    "pyvis>=0.3.2",
]

[project.scripts]
# 启动 Streamlit Web 界面
web = "streamlit:main.run"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_modules"]
